--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="economist_red">#E3120B</color>
+    <color name="LA85">#E1DFD0</color>
+    <color name="paris">#D0E1E1</color>
+    <color name="chicago">#141F52</color>
+    <color name="chicago45">#2E45B8</color>
 </resources>
