--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/container"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@color/LA85">
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -13,6 +14,7 @@
         android:text="Plant Identifier"
         android:textAllCaps="false"
         android:layout_above="@id/buttonDict"
+        android:fontFamily="sans-serif-light"
         android:textSize="21sp"
         android:textStyle="bold"
         />
@@ -24,6 +26,7 @@
         android:text="Dictionary"
         android:textAllCaps="false"
         android:layout_alignParentBottom="true"
+        android:fontFamily="sans-serif-light"
         android:textSize="21sp"
         android:textStyle="bold"
         />
@@ -44,16 +47,19 @@
         android:id="@+id/classified"
         android:layout_below="@+id/imageView"
         android:layout_marginTop="10sp"
+        android:textColor="@color/chicago45"
+        android:fontFamily="sans-serif-light"
         />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:text=""
-        android:textColor="#E3120B"
+        android:textColor="@color/chicago"
         android:textStyle="bold"
         android:textSize="27sp"
         android:id="@+id/result"
+        android:fontFamily="sans-serif-light"
         android:layout_below="@+id/classified"
         />
 </RelativeLayout>
