--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -29,7 +29,8 @@
             android:text="@string/Astilbe"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/button_first"
-            android:fontFamily="sans-serif-light"/>
+            android:fontFamily="sans-serif-light"
+            tools:ignore="VisualLintLongText" />
         <TextView
             android:id="@+id/textview_second"
             android:layout_width="wrap_content"
@@ -40,7 +41,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textview_first"
             android:fontFamily="sans-serif-light"
-            />
+            tools:ignore="VisualLintLongText" />
         <TextView
             android:id="@+id/textview_third"
             android:layout_width="wrap_content"
@@ -51,7 +52,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textview_second"
             android:fontFamily="sans-serif-light"
-            />
+            tools:ignore="VisualLintLongText" />
         <TextView
             android:id="@+id/textview_fourth"
             android:layout_width="wrap_content"
@@ -62,7 +63,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textview_third"
             android:fontFamily="sans-serif-light"
-            />
+            tools:ignore="VisualLintLongText" />
         <TextView
             android:id="@+id/textview_fifth"
             android:layout_width="wrap_content"
@@ -71,7 +72,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textview_fourth"
-            android:fontFamily="sans-serif-light"/>
+            android:fontFamily="sans-serif-light"
+            tools:ignore="VisualLintLongText" />
         <TextView
             android:id="@+id/textview_sixth"
             android:layout_width="wrap_content"
@@ -80,7 +82,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textview_fifth"
-            android:fontFamily="sans-serif-light"/>
+            android:fontFamily="sans-serif-light"
+            tools:ignore="VisualLintLongText" />
         <TextView
             android:id="@+id/textview_seventh"
             android:layout_width="wrap_content"
@@ -89,7 +92,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textview_sixth"
-            android:fontFamily="sans-serif-light"/>
+            android:fontFamily="sans-serif-light"
+            tools:ignore="VisualLintLongText" />
         <TextView
             android:id="@+id/textview_eighth"
             android:layout_width="wrap_content"
@@ -98,7 +102,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textview_seventh"
-            android:fontFamily="sans-serif-light"/>
+            android:fontFamily="sans-serif-light"
+            tools:ignore="VisualLintLongText" />
         <TextView
             android:id="@+id/textview_ninth"
             android:layout_width="wrap_content"
@@ -107,7 +112,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textview_eighth"
-            android:fontFamily="sans-serif-light"/>
+            android:fontFamily="sans-serif-light"
+            tools:ignore="VisualLintLongText" />
         <TextView
             android:id="@+id/textview_tenth"
             android:layout_width="wrap_content"
@@ -116,7 +122,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textview_ninth"
-            android:fontFamily="sans-serif-light"/>
+            android:fontFamily="sans-serif-light"
+            tools:ignore="VisualLintLongText" />
         <TextView
             android:id="@+id/textview_eleventh"
             android:layout_width="wrap_content"
@@ -125,7 +132,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textview_tenth"
-            android:fontFamily="sans-serif-light"/>
+            android:fontFamily="sans-serif-light"
+            tools:ignore="VisualLintLongText" />
         <TextView
             android:id="@+id/textview_twelfth"
             android:layout_width="wrap_content"
@@ -134,7 +142,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textview_eleventh"
-            android:fontFamily="sans-serif-light"/>
+            android:fontFamily="sans-serif-light"
+            tools:ignore="VisualLintLongText" />
         <TextView
             android:id="@+id/textview_thirteenth"
             android:layout_width="wrap_content"
@@ -143,7 +152,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textview_twelfth"
-            android:fontFamily="sans-serif-light"/>
+            android:fontFamily="sans-serif-light"
+            tools:ignore="VisualLintLongText" />
         <TextView
             android:id="@+id/textview_fourteenth"
             android:layout_width="wrap_content"
@@ -152,7 +162,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textview_thirteenth"
-            android:fontFamily="sans-serif-light"/>
+            android:fontFamily="sans-serif-light"
+            tools:ignore="VisualLintLongText" />
         <TextView
             android:id="@+id/textview_fifteenth"
             android:layout_width="wrap_content"
@@ -161,7 +172,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textview_fourteenth"
-            android:fontFamily="sans-serif-light"/>
+            android:fontFamily="sans-serif-light"
+            tools:ignore="VisualLintLongText" />
         <TextView
             android:id="@+id/textview_sixteenth"
             android:layout_width="wrap_content"
@@ -170,6 +182,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textview_fifteenth"
-            android:fontFamily="sans-serif-light"/>
+            android:fontFamily="sans-serif-light"
+            tools:ignore="VisualLintLongText" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
