--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity"
     android:background="@color/LA85">
     <Button
-        android:layout_width="match_parent"
+        android:layout_width="320dp"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:id="@+id/buttonPic"
@@ -17,9 +17,9 @@
         android:fontFamily="sans-serif-light"
         android:textSize="21sp"
         android:textStyle="bold"
-        tools:ignore="VisualLintButtonSize" />
+        />
     <Button
-        android:layout_width="match_parent"
+        android:layout_width="320dp"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:id="@+id/buttonDict"
@@ -29,7 +29,7 @@
         android:fontFamily="sans-serif-light"
         android:textSize="21sp"
         android:textStyle="bold"
-        tools:ignore="VisualLintButtonSize" />
+        />
     <ImageView
         android:layout_width="370sp"
         android:layout_height="370sp"
