--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:text="@string/plant_identifier"
         android:textAllCaps="false"
         android:layout_above="@id/buttonDict"
-        android:fontFamily="sans-serif-light"
+        android:fontFamily="roboto-serif"
         android:textSize="21sp"
         android:textStyle="bold"
         />
@@ -26,7 +26,7 @@
         android:text="@string/dictionary"
         android:textAllCaps="false"
         android:layout_alignParentBottom="true"
-        android:fontFamily="sans-serif-light"
+        android:fontFamily="roboto-serif"
         android:textSize="21sp"
         android:textStyle="bold"
         />
@@ -48,7 +48,7 @@
         android:layout_below="@+id/imageView"
         android:layout_marginTop="10sp"
         android:textColor="@color/chicago45"
-        android:fontFamily="sans-serif-light"
+        android:fontFamily="roboto-serif"
         />
     <TextView
         android:layout_width="wrap_content"
@@ -59,7 +59,7 @@
         android:textStyle="bold"
         android:textSize="27sp"
         android:id="@+id/result"
-        android:fontFamily="sans-serif-light"
+        android:fontFamily="roboto-serif"
         android:layout_below="@+id/classified"
         />
 </RelativeLayout>
