--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -11,7 +11,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="16dp">
-
         <Button
             android:id="@+id/button_first"
             android:layout_width="320dp"
@@ -32,8 +31,7 @@
             android:text="@string/Astilbe"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/button_first"
-            android:fontFamily="sans-serif-light"
-            tools:ignore="VisualLintLongText" />
+            android:fontFamily="sans-serif-light"/>
         <TextView
             android:id="@+id/textview_second"
             android:layout_width="wrap_content"
