--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -11,18 +11,23 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="16dp">
+
         <Button
             android:id="@+id/button_first"
-            android:layout_width="320dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="28dp"
+            android:layout_width="55dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="4dp"
+            android:drawableLeft="@drawable/ic_action_home"
             android:fontFamily="sans-serif"
             android:text="@string/home"
             android:textAllCaps="false"
+            android:textColor="@android:color/transparent"
             app:layout_constraintBottom_toTopOf="@id/textview_first"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.5" />
+            app:layout_constraintVertical_bias="0.5"
+            tools:ignore="RtlHardcoded,TextSizeCheck"/>
+
         <TextView
             android:id="@+id/textview_first"
             android:layout_width="wrap_content"
@@ -31,7 +36,8 @@
             android:text="@string/Astilbe"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/button_first"
-            android:fontFamily="sans-serif-light"/>
+            android:fontFamily="sans-serif-light"
+            tools:ignore="VisualLintLongText" />
         <TextView
             android:id="@+id/textview_second"
             android:layout_width="wrap_content"
