--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:id="@+id/dict"
+    android:background="@color/LA85"
     tools:context=".FirstFragment">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -16,38 +17,42 @@
             android:id="@+id/button_first"
             android:layout_width="55dp"
             android:layout_height="50dp"
-            android:layout_marginStart="4dp"
+            android:layout_marginStart="0dp"
             android:drawableLeft="@drawable/ic_action_home"
             android:fontFamily="sans-serif"
             android:text="@string/home"
             android:textAllCaps="false"
-            android:textColor="@android:color/transparent"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toTopOf="@id/textview_first"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.5"
-            tools:ignore="RtlHardcoded,TextSizeCheck"/>
+            tools:ignore="RtlHardcoded,TextSizeCheck,TextContrastCheck" />
 
         <TextView
             android:id="@+id/textview_first"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="4dp"
+            android:background="@drawable/rounded_corner"
+            android:fontFamily="sans-serif-light"
             android:text="@string/Astilbe"
+            android:textColor="@color/london"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/button_first"
-            android:fontFamily="sans-serif-light"
             tools:ignore="VisualLintLongText" />
+
         <TextView
             android:id="@+id/textview_second"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:background="@drawable/rounded_corner"
+            android:fontFamily="sans-serif-light"
             android:text="@string/Bellflower"
+            android:textColor="@color/london"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textview_first"
-            android:fontFamily="sans-serif-light"
             tools:ignore="VisualLintLongText" />
         <TextView
             android:id="@+id/textview_third"
@@ -59,6 +64,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textview_second"
             android:fontFamily="sans-serif-light"
+            android:textColor="@color/london"
+            android:background="@drawable/rounded_corner"
             tools:ignore="VisualLintLongText" />
         <TextView
             android:id="@+id/textview_fourth"
@@ -70,126 +77,164 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textview_third"
             android:fontFamily="sans-serif-light"
+            android:textColor="@color/london"
+            android:background="@drawable/rounded_corner"
             tools:ignore="VisualLintLongText" />
         <TextView
             android:id="@+id/textview_fifth"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:text="@string/CaliforniaPoppy"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textview_fourth"
             android:fontFamily="sans-serif-light"
+            android:textColor="@color/london"
+            android:background="@drawable/rounded_corner"
             tools:ignore="VisualLintLongText" />
         <TextView
             android:id="@+id/textview_sixth"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:text="@string/Carnation"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textview_fifth"
             android:fontFamily="sans-serif-light"
+            android:textColor="@color/london"
+            android:background="@drawable/rounded_corner"
             tools:ignore="VisualLintLongText" />
         <TextView
             android:id="@+id/textview_seventh"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:text="@string/Daisy"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textview_sixth"
             android:fontFamily="sans-serif-light"
+            android:textColor="@color/london"
+            android:background="@drawable/rounded_corner"
             tools:ignore="VisualLintLongText" />
         <TextView
             android:id="@+id/textview_eighth"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:text="@string/Tickseed"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textview_seventh"
             android:fontFamily="sans-serif-light"
+            android:textColor="@color/london"
+            android:background="@drawable/rounded_corner"
             tools:ignore="VisualLintLongText" />
         <TextView
             android:id="@+id/textview_ninth"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:text="@string/Daffodil"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textview_eighth"
             android:fontFamily="sans-serif-light"
+            android:textColor="@color/london"
+            android:background="@drawable/rounded_corner"
             tools:ignore="VisualLintLongText" />
         <TextView
             android:id="@+id/textview_tenth"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:text="@string/Dandelion"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textview_ninth"
             android:fontFamily="sans-serif-light"
+            android:textColor="@color/london"
+            android:background="@drawable/rounded_corner"
             tools:ignore="VisualLintLongText" />
         <TextView
             android:id="@+id/textview_eleventh"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:text="@string/Iris"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textview_tenth"
             android:fontFamily="sans-serif-light"
+            android:textColor="@color/london"
+            android:background="@drawable/rounded_corner"
             tools:ignore="VisualLintLongText" />
         <TextView
             android:id="@+id/textview_twelfth"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:text="@string/Magnolia"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textview_eleventh"
             android:fontFamily="sans-serif-light"
+            android:textColor="@color/london"
+            android:background="@drawable/rounded_corner"
             tools:ignore="VisualLintLongText" />
         <TextView
             android:id="@+id/textview_thirteenth"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:text="@string/Rose"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textview_twelfth"
             android:fontFamily="sans-serif-light"
+            android:textColor="@color/london"
+            android:background="@drawable/rounded_corner"
             tools:ignore="VisualLintLongText" />
         <TextView
             android:id="@+id/textview_fourteenth"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:text="@string/Sunflower"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textview_thirteenth"
             android:fontFamily="sans-serif-light"
+            android:textColor="@color/london"
+            android:background="@drawable/rounded_corner"
             tools:ignore="VisualLintLongText" />
         <TextView
             android:id="@+id/textview_fifteenth"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:text="@string/Tulip"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textview_fourteenth"
             android:fontFamily="sans-serif-light"
+            android:textColor="@color/london"
+            android:background="@drawable/rounded_corner"
             tools:ignore="VisualLintLongText" />
         <TextView
             android:id="@+id/textview_sixteenth"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:text="@string/WaterLily"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textview_fifteenth"
             android:fontFamily="sans-serif-light"
+            android:textColor="@color/london"
+            android:background="@drawable/rounded_corner"
             tools:ignore="VisualLintLongText" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
