--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="paris">#D0E1E1</color>
     <color name="chicago">#141F52</color>
     <color name="chicago45">#2E45B8</color>
+    <color name="london">#0D0D0D</color>
 </resources>
